--- a/angular.json
+++ b/angular.json
@@ -32,8 +32,7 @@
               }
             ],
             "styles": [
-              "@angular/material/prebuilt-themes/azure-blue.css",
-              "src/styles.scss"
+              "@angular/material/prebuilt-themes/azure-blue.css"
             ],
             "scripts": []
           },
@@ -92,8 +91,7 @@
               }
             ],
             "styles": [
-              "@angular/material/prebuilt-themes/azure-blue.css",
-              "src/styles.scss"
+              "@angular/material/prebuilt-themes/azure-blue.css"
             ],
             "scripts": []
           }
